--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ nav .bi{
         height: 100vh;
         width: 200px;
         top: 0;
-        right: -200;
+        right: -200px;
         text-align: left;
         z-index: 2;
         transition: 1s;
