--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ nav .bi{
         display: block;
     }
     .nav-links{
-        background: #f44336;
+        background: #black;
         position:fixed;
         height: 100vh;
         width: 200px;
