--- a/style.css
+++ b/style.css
@@ -108,8 +108,7 @@ nav .bi{
         display: block;
     }
     .nav-links{
-        background: #white;
-        color:#fb5607;
+        background: #f44336;
         position:fixed;
         height: 100vh;
         width: 200px;
